[gd_scene load_steps=28 format=3 uid="uid://jtdrbvd7mlc2"]

[ext_resource type="Script" path="res://Player.gd" id="1_fnswr"]
[ext_resource type="PackedScene" uid="uid://bng2ywy88tt0j" path="res://components/C_Health.tscn" id="2_toq2f"]
[ext_resource type="Texture2D" uid="uid://h0pi7i601hfy" path="res://sprites/light.png" id="3_1beip"]
[ext_resource type="Script" path="res://OuroborosProgress.gd" id="3_fipd6"]
[ext_resource type="Texture2D" uid="uid://db4n26ypsdgac" path="res://sprites/invincibility.png" id="4_kn4tl"]
[ext_resource type="Texture2D" uid="uid://cuul2te2vk883" path="res://sprites/player_.png" id="4_r8q8w"]
[ext_resource type="PackedScene" uid="uid://cnfbin4i6ky3s" path="res://components/C_CharacterMovement.tscn" id="7_covwn"]
[ext_resource type="PackedScene" uid="uid://ivxqjh03xpa5" path="res://components/C_ProjectileShooter.tscn" id="8_nldtv"]
[ext_resource type="PackedScene" uid="uid://c4ny01d7dkh5k" path="res://projectile/Slash.tscn" id="9_752ct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdf52"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smnpw"]
atlas = ExtResource("4_r8q8w")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_33v40"]
atlas = ExtResource("4_r8q8w")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsfpo"]
atlas = ExtResource("4_r8q8w")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjftb"]
atlas = ExtResource("4_r8q8w")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhpq1"]
atlas = ExtResource("4_r8q8w")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy8p6"]
atlas = ExtResource("4_r8q8w")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qr6a"]
atlas = ExtResource("4_r8q8w")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nek6"]
atlas = ExtResource("4_r8q8w")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ifud"]
atlas = ExtResource("4_r8q8w")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0g85"]
atlas = ExtResource("4_r8q8w")
region = Rect2(720, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjjs5"]
atlas = ExtResource("4_r8q8w")
region = Rect2(800, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8b5d"]
atlas = ExtResource("4_r8q8w")
region = Rect2(880, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieh33"]
atlas = ExtResource("4_r8q8w")
region = Rect2(960, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cad5h"]
atlas = ExtResource("4_r8q8w")
region = Rect2(1040, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjsrt"]
atlas = ExtResource("4_r8q8w")
region = Rect2(1120, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x30k5"]
atlas = ExtResource("4_r8q8w")
region = Rect2(1200, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_ssihf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smnpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33v40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsfpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjftb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhpq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy8p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qr6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nek6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ifud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0g85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjjs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8b5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cad5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjsrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x30k5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
motion_mode = 1
script = ExtResource("1_fnswr")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fdf52")

[node name="Light" type="PointLight2D" parent="."]
color = Color(1, 0.666667, 0.290196, 1)
energy = 16.0
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.643137)
texture = ExtResource("3_1beip")
texture_scale = 2.0

[node name="OuroborosProgress" type="Node2D" parent="."]
script = ExtResource("3_fipd6")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
clip_children = 2
light_mask = 2
visibility_layer = 2
z_index = 1
position = Vector2(5.43892e-07, 1.35973e-06)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ssihf")
frame_progress = 0.764613
speed_scale = 2.0

[node name="WhiteOverlay" type="Sprite2D" parent="Sprite"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(4, 4)
texture = ExtResource("4_kn4tl")

[node name="C_Health" parent="." instance=ExtResource("2_toq2f")]
max_immunity_time = 30

[node name="C_CharacterMovement" parent="." instance=ExtResource("7_covwn")]
movement_speed = 2.0
max_movement_velocity = 300.0

[node name="C_ProjectileShooter" parent="." instance=ExtResource("8_nldtv")]
projectile = ExtResource("9_752ct")
damage = 5.0
max_prepare_time = 5
max_cooldown = 12
self_knockback = 3.0

[connection signal="hurt" from="." to="." method="_on_hurt"]
